[package]
name = "random_scales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.2.4", features = ["futures"] }
web-sys = "0.3.68"
